unimrcp-swig-wrapper/Dockerfile: forgot to call 'make' for swig-wrapper

--- a/unimrcp-swig-wrapper/Dockerfile
+++ b/unimrcp-swig-wrapper/Dockerfile
@@ -44,7 +44,8 @@ RUN cd /root/src/git \
   && git clone https://github.com/unispeech/swig-wrapper \
   && cd swig-wrapper \
   && git checkout 01af0d80a5dc9a08240095f4d49a377fb28e4c26 \
-  && cmake -D APR_LIBRARY=/usr/local/apr/lib/libapr-1.so.0.4.6 -D APR_INCLUDE_DIR=/usr/local/apr/include/apr-1 -D APU_LIBRARY=/usr/local/apr/lib/libaprutil-1.so -D APU_INCLUDE_DIR=/usr/local/apr/include/apr-1 -D UNIMRCP_SOURCE_DIR=/usr/local/src/git/unimrcp -D SOFIA_INCLUDE_DIRS=/usr/include/sofia-sip-1.12 -D WRAP_CPP=OFF -D WRAP_JAVA=OFF-D BUILD_C_EXAMPLE=OFF .
+  && cmake -D APR_LIBRARY=/usr/local/apr/lib/libapr-1.so.0.4.6 -D APR_INCLUDE_DIR=/usr/local/apr/include/apr-1 -D APU_LIBRARY=/usr/local/apr/lib/libaprutil-1.so -D APU_INCLUDE_DIR=/usr/local/apr/include/apr-1 -D UNIMRCP_SOURCE_DIR=/usr/local/src/git/unimrcp -D SOFIA_INCLUDE_DIRS=/usr/include/sofia-sip-1.12 -D WRAP_CPP=OFF -D WRAP_JAVA=OFF-D BUILD_C_EXAMPLE=OFF . \
+  && make
 
 
 CMD ["bash"]
